--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@ body {
   background-color: #ecf0f1;
 }
 
+th {
+  text-align: center !important;
+}
+
 #results {
   font-size: 1.2em;
   width: 50%;
